[package]
name = "gltftool"
authors = ["Eldad Zack <eldad@fogrefinery.com>"]
version = "0.1.0"
edition = "2021"
description = "GLTF CLI tool"
license = "MIT"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
gltf = { version = "1.1.0", features = ["names", "import"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
thiserror = "1.0.38"
